# substrate-api-sidecar

./: .env  package.json  specs.yml
calc/: Cargo.toml
calc/src/: calc_fee.rs
config/: types.json
src/: main.ts
src/chains-config/: defaultControllers.ts  dockMainnetControllers.ts  dockTestnetControllers.ts  kulupuControllers.ts  mandalaControllers.ts
src/controllers/: index.ts
src/controllers/staking/: ErasRewardPointsController.ts  index.ts
src/services/: index.ts
src/services/blocks/: BlocksService.ts
src/services/staking/: ErasRewardPointsService.ts  index.ts
src/types/config/: SidecarConfig.ts
src/types/responses/: ErasRewardPoint.ts  ErasRewardPoints.ts  ErasRewardPointsList.ts  index.ts
