[package]
name = "calc"
version = "0.1.0"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"
publish = false
repository = "https://github.com/stafiprotocol/substrate-api-sidecar"
description = "Off-chain calculations for Substrate Sidecar."

[lib]
crate-type = ["cdylib"]

[features]
debug = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = { version = "0.2", default_features = false, features = ["serde-serialize"] }
serde_derive = { version = "1", default_features = false }
serde = { version = "1", default_features = false }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2.0", optional = true }
log = "0.4.8"

[dependencies.sp-arithmetic]
version = "2.0.0-rc6"
default_features = false

[dependencies.sp-arithmetic-legacy]
package = "sp-arithmetic"
git = "https://github.com/paritytech/substrate"
rev = "896d4df8336ae6e6fb6eeaafce58818b42a04add"
default_features = false

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
